# ksrpc

./: HACK.md  README.md  pyproject.toml  requirements.txt  requirements_client.txt  requirements_server.txt  requirements_simple.txt  setup.py
.github/workflows/: fork-sync.reusable.yml  sync-upstream.yml
deprecated/examples/: jqdatasdk_hack.py  rqdatac_hack.py  tushare_client.py  tushare_hack.py  wind_hack.py
deprecated/serializer/: json_.py
deprecated/server/: eikon.py  rqdatac.py
deprecated/tushare/: tushare_demo2.py  tushare_demo3.py
examples/: big_data.py  config.py  demo_big_data.py  demo_call.py  demo_callback.py  demo_gather.py  demo_hack.py  demo_http.py  demo_iterator.py  demo_jqresearch.py  demo_parent.py  demo_reverse.py  demo_setattr.py  demo_stubs.py  demo_sync.py  demo_ths.py  demo_url.py  demo_websocket.py  joinquant_playwright.py  jqdatasdk_hack.py  jqresearch_query.py  jqresearch_reverse.py  rqdatac_hack.py  tushare_client.py  tushare_hack.py  wind_hack.py
examples/tushare/: demo1.py  demo2.py  demo3.py
examples_frp/: README.md  frpc.ipynb  frpc.toml  frps.toml  ksrpc.ipynb  ksrpc_frpc.ipynb  ksrpc_frpc2.ipynb  redirect.py  srv.py
ksrpc/: __init__.py  __main__.py  app.py  cache.py  caller.py  caller_simple.py  client.py  config.py  config_client.py  config_server.py  importer.py  model.py  rpc_client.py  rpc_reverse.py  run_app.py  run_gunicorn.py  run_notebook.py  run_simple.py  update_quota.py
ksrpc/app/: app_.py  http_.py  simple_.py  websocket_.py
ksrpc/connections/: __init__.py  http.py  websocket.py
ksrpc/hack/: WindPy.py  __init__.py  jqdatasdk.py  rqdatac.py  tushare.py
ksrpc/serializer/: pkl_gzip.py
ksrpc/server/: WindPy.py  __init__.py  config.py  demo.py  jqdatasdk.py  rqdatac.py  tushare.py
ksrpc/utils/: async_.py  check_.py  chunks.py  date_.py  ip_.py  key_.py  misc.py  notebook.py  process.py  stubs.py  stubs_0.py  stubs_1.py  tqdm.py  urls.py
lang/: README.md  Test_CSharp.cs  Test_Go.go  Test_Javascript.html  Test_MATLAB.m  Test_NodeJS.js  Test_R.R  Test_Ruby.rb  Test_php.php
stubs/: README.md
stubs/ksrpc/: client.pyi
tests/: akshare_.py  builtins_.py  caller.py  calls.py  eikon_.py  math_.py  numpy_.py  pandas_.py  serialize_.py  time_.py  xbbg_.py
